# ONGA_BlueDoctor

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.3b3063d.4.8-pre1  CMakeLists.txt.user.72420ad.22  ONGProj.pro  README.md
Main_app/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.32fb156
Main_app/resource/: config.ini  rsc.qrc
Main_app/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Main_app/src/Alarm/: alarm.cpp
Main_app/src/BlueDoctorReceiver/: bluedocterreceiver.cpp  bluedocterreceiver.h  bluedocterreceiver.ui
Main_app/src/Config/: config.cpp  config.h
Main_app/src/Data/: data.cpp  data.h
Main_app/src/FSM/: fsm.cpp  fsm.h  refresh.cpp  refresh.h
Main_app/src/GUI/CameraParameterController/: cameraparametercontoller.cpp
Main_app/src/GUI/HSVRangeController/: hsvrangecontroller.cpp  hsvrangecontroller.h  hsvrangecontroller.ui
Main_app/src/GUI/HSVRangeController/RangeController/: rangecontroller.cpp  rangecontroller.h
Main_app/src/GUI/ImageViewer/: imageviewer.cpp  imageviewer.h
Main_app/src/GUI/MainController/: maincontroller.cpp  maincontroller.h  maincontroller.ui
Main_app/src/GUI/ParameterController/: parametercontroller.cpp  parametercontroller.h  parametercontroller.ui
Main_app/src/GUI/PlaneViewer/: planeviewer.cpp  planeviewer.h  planeviewer.ui
Main_app/src/GUI/PointCloudViewer/: pointcloudviewer.cpp
Main_app/src/GUI/Spoit_ImageViewer/: spoit_imageviewer.cpp  spoit_imageviewer.h
Main_app/src/Vision/: vision.cpp  vision.h
Main_app/src/Vision/D400s/: d400s.cpp  d400s.h
Main_app/src/Vision/R200/: r200.cpp  r200.h
Sample_basic_gui/Sample_basic_gui_app/: CMakeLists.txt  config.ini
Sample_basic_gui/Sample_basic_gui_app/src/: mainwindow.cpp  mainwindow.h
resource/: config.ini  rsc.qrc
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Alarm/: alarm.h
src/BlueDoctorReceiver/: bluedocterreceiver.cpp  bluedocterreceiver.h  bluedocterreceiver.ui
src/Data/: data.cpp  data.h
src/FSM/: measurement.cpp  measurement.h  stanby.cpp  stanby.h  statebase.h
src/GUI/CameraParameterController/: cameraparametercontoller.h  cameraparametercontoller.ui
src/GUI/HSVRangeController/: hsvrangecontroller.cpp  hsvrangecontroller.h
src/GUI/HSVRangeController/RangeController/: rangecontroller.ui
src/GUI/ImageViewer/: imageviewer.cpp  imageviewer.h  imageviewer.ui
src/GUI/MainController/: maincontroller.cpp  maincontroller.h  maincontroller.ui
src/GUI/PlaneViewer/: planeviewer.cpp  planeviewer.h  planeviewer.ui
src/GUI/PointCloudViewer/: pointcloudviewer.h  pointcloudviewer.ui
src/GUI/Spoit_ImageViewer/: spoit_imageviewer.cpp  spoit_imageviewer.h
src/Vision/: vision.cpp  vision.h
src/Vision/D400s/: d400s.cpp  d400s.h
